[gd_scene load_steps=9 format=2]

[ext_resource path="res://textures/text/Bosk.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Interface/Menu.tres" type="Theme" id=2]
[ext_resource path="res://Player/Player_GUI/Upgrades/UpgradeSelector.gd" type="Script" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxFlat" id=4]

[sub_resource type="DynamicFont" id=12]
size = 24
extra_spacing_top = 3
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.0862745, 0.0862745, 0.0862745, 0.827451 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.729412, 0.729412, 0.729412, 1 )
border_blend = true

[sub_resource type="Theme" id=3]
PanelContainer/styles/panel = SubResource( 4 )
TooltipLabel/colors/font_color = Color( 1, 1, 1, 1 )
TooltipLabel/colors/font_color_shadow = Color( 0, 0, 0, 0 )
TooltipLabel/constants/shadow_offset_x = 1
TooltipLabel/constants/shadow_offset_y = 1
TooltipLabel/fonts/font = SubResource( 12 )
TooltipPanel/styles/panel = SubResource( 13 )

[node name="UpgradeSelector" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 2 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )
show_all_upgrades = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2
size_flags_horizontal = 5

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 261.0
mouse_filter = 2
size_flags_vertical = 3

[node name="Background" type="PanelContainer" parent="VBoxContainer"]
unique_name_in_owner = true
margin_top = 265.0
margin_right = 1024.0
margin_bottom = 517.0
rect_min_size = Vector2( 100, 0 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.96
theme = SubResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Background"]
margin_right = 1024.0
margin_bottom = 252.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" type="Label" parent="VBoxContainer/Background/VBoxContainer"]
unique_name_in_owner = true
margin_right = 1024.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
theme = ExtResource( 2 )
text = "What to upgrade in game?"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Background/VBoxContainer"]
margin_top = 44.0
margin_right = 1024.0
margin_bottom = 76.0
size_flags_horizontal = 3
size_flags_vertical = 2

[node name="LabelPoints" type="Label" parent="VBoxContainer/Background/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 439.0
margin_right = 584.0
margin_bottom = 32.0
size_flags_horizontal = 6
theme = ExtResource( 2 )
theme_type_variation = "LabelSubtitle"
text = "Points Left: "

[node name="PointsLeft" type="Label" parent="VBoxContainer/Background/VBoxContainer/HBoxContainer/LabelPoints"]
unique_name_in_owner = true
anchor_left = 1.0
anchor_right = 1.0
margin_left = -1.0
margin_top = 1.0
margin_right = 56.0
margin_bottom = 31.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_type_variation = "LabelSubtitle"
text = "000"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/Background/VBoxContainer"]
margin_top = 91.0
margin_right = 1024.0
margin_bottom = 211.0
rect_min_size = Vector2( 0, 120 )
scroll_deadzone = 50

[node name="UpgradeContainer" type="HBoxContainer" parent="VBoxContainer/Background/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
margin_right = 1024.0
margin_bottom = 120.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="LabelSelfDestroyed" type="Label" parent="VBoxContainer/Background/VBoxContainer"]
unique_name_in_owner = true
visible = false
margin_left = 392.0
margin_top = 80.0
margin_right = 632.0
margin_bottom = 110.0
size_flags_horizontal = 4
custom_colors/font_color = Color( 0.729412, 0.333333, 0.333333, 1 )
text = "(Self-destroyed)"

[node name="Button" type="Button" parent="VBoxContainer/Background/VBoxContainer"]
margin_left = 964.0
margin_top = 215.0
margin_right = 1024.0
margin_bottom = 252.0
rect_min_size = Vector2( 60, 0 )
hint_tooltip = "All left points will be lost"
size_flags_horizontal = 8
size_flags_vertical = 8
theme = ExtResource( 2 )
text = "Done"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 521.0
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3

[connection signal="pressed" from="VBoxContainer/Background/VBoxContainer/Button" to="." method="_on_Button_pressed"]
